--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.3.0",
-    "@react-native-picker/picker": "^2.11.0",
-    "expo": "~52.0.41",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
-    "expo-image-picker": "~16.0.6"
+    "@react-native-picker/picker": "2.11.0",
+    "expo": "^53.0.0",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
