--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
+    "react-icons": "^5.5.0",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
