--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.3.0",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.12",
     "@react-navigation/stack": "^7.3.3",
-    "expo": "^52.0.0",
+    "expo": "^53.0.0",
+    "expo-checkbox": "~4.1.4",
     "expo-image-picker": "~16.1.4",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-star-rating-widget": "^1.9.2"
