--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
     "expo": "~52.0.41",
+    "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
