--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,9 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "jsx": "react-native",
-    "module": "esnext",
-    "target": "esnext",
-    "lib": [
-      "es6"
-    ],
+    "jsx": "react",
     "strict": true,
-    "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  },
-  "exclude": [
-    "node_modules"
-  ],
-  "extends": "expo/tsconfig.base"
+    "allowSyntheticDefaultImports": true
+  }
 }
