--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.12",
+    "@stomp/stompjs": "^7.1.1",
     "expo": "^53.0.9",
     "expo-checkbox": "~4.1.4",
     "expo-image-picker": "~16.1.4",
@@ -28,12 +29,14 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-star-rating-widget": "^1.9.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/sockjs-client": "^1.5.4",
     "typescript": "^5.8.3"
   },
   "private": true
